# booking-api-aws

./: .gitattributes  .gitignore  404.html  README.md  index.html
.github/workflows/: ci_cd.yml  ci_cd_end_to_end.yml  deploy_docs.yml  ecr_ecs.yml  ecr_ecs_dev.yml  ecr_ecs_prod.yml  ecs_manage_passwords.yml  terraform_destroy.yml  terraform_dev.yml  terraform_prod.yml  terraform_validate_plan_apply.yml  terraform_vpc.yml
application_overview/: index.html
authentication/: index.html
infrastructure/booking_service/dev/: main.tf  outputs.tf  (+1 more)
migrations/: index.html
search/: search_index.json
services/booking/: compose.yml  mkdocs.yml  pyproject.toml
services/booking/app/: auth.py  config.py  db.py  main.py
services/booking/app/api/: endpoints.py  ping.py  token.py
services/booking/app/models/: __init__.py  db_models.py  pydantic_models.py
services/booking/docker/: db.Dockerfile  deploy.Dockerfile  deploy.Dockerfile.dockerignore  test.Dockerfile  test.Dockerfile.dockerignore
services/booking/docs/: application.md  application_overview.md  authentication.md  index.md  migrations.md  setup_workflows.md  terraform.md
services/booking/migrations/: env.py
services/booking/migrations/versions/: 00ba29ba9ef0_create_user_table.py  be5c4de9546c_initial_migration.py
services/booking/scripts/: entrypoint.sh  generate_and_store_keys.sh
services/booking/tests/: conftest.py
services/booking/tests/end_to_end/: test_flows.py  test_health_check.py
services/booking/tests/integration/test_app/: test_main.py
services/booking/tests/integration/test_database/: test_db_models.py
services/booking/tests/unit/: test_models.py
services/booking/tools/: deploy_ecs.py  manage_passwords.py  manage_passwords_trigger.py
setup_workflows/: index.html
terraform/: index.html
(+21 files in other folders)
